--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   "author": "Mehdi Shokrani",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "md5": "^2.3.0",
-    "mongoose": "^7.4.3",
-    "mongoose-encryption": "^2.1.2"
+    "mongoose": "^7.4.3"
   }
 }
